fix: Remove nav ul overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ nav h1 a {
     background-color: #333E48;
     font-size: 1.5rem;
     margin: 0;
-    width: calc(50% - 80px);
+    /*width: calc(50% - 80px);*/
 }
 
 /* Display list items side by side */
@@ -445,7 +445,7 @@ main section {
 
 	/* --- restaurant styles --- */
 	.inside #breadcrumb {
-		width:100%;
+		/*width:100%;*/
 	}
 	.inside #map-container {
 		width:100%;
